<resources>
    <string name="app_name">Code</string>
    <string name="ans_button">Yes of course</string>
    <string name="q">What do you choose?</string>
    <string name="Pascal">Pascal</string>
    <string name="Delphi">Delphi</string>
    <string name="Java">Java</string>
    <string name="HTML">HTML</string>
    <string name="true_button">Yes</string>
    <string name="false_button">No</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="C">C++</string>
    <string name="next_button">Ask me</string>
    <string name="question_pascal1">Is there anything in Pascal Boolean elements?</string>
    <string name="question_pascal2">Does Pascal task of object-oriented programming?</string>
    <string name="question_pascal3">Is it possible to change the type of a variable Pascal?</string>
    <string name="question_pascal4">Switch characteristic of Pascal?</string>
    <string name="question_pascal5">Do I need to at the end of the program to write "return 0"?</string>
    <string name="question_delphi1">Delphi is based on Pascal?</string>
    <string name="question_delphi2">Is it possible to create games with it?</string>
    <string name="question_delphi3">The name is derived from the Delphi owl "dolphin"?</string>
    <string name="question_delphi4">Is IntToStr operator of Delphi?</string>
    <string name="question_delphi5">Is there a component of the "Button"?</string>
    <string name="question_java1">A Java program created interpretation only for phones?</string>
    <string name="question_java2">Windows is written in Java?</string>
    <string name="question_html1">Does unpaired HTML tags?</string>
    <string name="question_html2">HTML stands for Hypertext Markup Language?</string>
    <string name="question_html3">HTML - a descendant of Pascal?</string>
    <string name="question_html4">In HTML tags is less than 50?</string>
    <string name="question_html5">Tag "IMG SRC" is responsible for inserting the image on the page?</string>
    <string name="question_c1">Is this an object-oriented language?</string>
    <string name="question_c2">Connecting libraries used with the # inklude?</string>
    <string name="question_c3">Is it possible to write projects in that language?</string>
    <string name="question_c4">Is the library Qt graphics?</string>
    <string name="question_c5">Allocator - it is not a template class?</string>
    <string name="action_settings">Settings</string>
</resources>
